# simage

./: .gitignore  CMakeLists.txt
src/: image_normalizer.cpp  image_normalizer.h  image_normalizer_evaluator.cpp  image_normalizer_evaluator.h  main.cpp  util.cpp  util.h
